Fixed a myrida of issues: animation in background poppin gon parallax views fixed. Directive for embedding youtube videos added. Navigation bar title position bug on small screens fixed. Adde dn content for about section.

--- a/app/styles/caves-karsts.css
+++ b/app/styles/caves-karsts.css
@@ -4,6 +4,7 @@
 /*** SLIDE 0 ***/
  #ck-slide0 {
     background-image: url(../images/caves_karsts/DSC_0318_web.jpg);
+    background-position: 0px 0px;
     max-width: 100%;
 }
 #ck-slide0 p:first-child {
