--- a/app/styles/conservation.css
+++ b/app/styles/conservation.css
@@ -3,67 +3,67 @@
 *******************************/
 /*** SLIDE 0 ***/
 #cons-slide0 {
-    /*background-image: url(../images/caves_karsts/DSC_0318_web.jpg);*/
-    background-color: #27343D;
+    background-image: url(../images/conservation/XO5J7652_web.jpg);
+    /*background-color: #555;*/
 }
 #cons-slide0 p:first-child {
-    border: 1px solid #425968;
+    border: 1px solid #777;
 }
 /*** SLIDE 1 ***/
 #cons-slide1 {
-    /*background-image:url(../images/caves_karsts/Seco chnl3 7-25-07.MPG);*/
-    background-color: #613907;
+    /*background-image: url(../images/conservation/**.jpg);*/
+    background-color: #222;
 }
 #cons-slide1 p:first-child {
-    border: 1px solid #425968;
+    border: 1px solid #777;
 }
 /*** SLIDE 2 ***/
 #cons-slide2 {
-    /*background-image:url(../images/caves_karsts/For-Doty1_940x714_web.jpg);*/
-    background-color: #4A4300;
+    /*background-image: url(../images/conservation/**.jpg);*/
+    background-color: #555;
 }
 #cons-slide2 p:first-child {
-    border: 1px solid #8F8100;
+    border: 1px solid #777;
 }
 /*** SLIDE 3 ***/
 #cons-slide3 {
-    /*background-image:url(../images/caves_karsts/MVI_3085.MOV);*/
-    background-color: #27343D;
+    /*background-image: url(../images/conservation/**.jpg);*/
+    background-color: #222;
 }
 #cons-slide3 p:first-child {
-    border: 1px solid #425968;
+    border: 1px solid #777;
 }
 /*** SLIDE 4 ***/
 #cons-slide4 {
-    /*background-image:url(../images/caves_karsts/edwards-limestone_web.jpg);*/
-    background-color: #613907;
+    /*background-image: url(../images/conservation/**.jpg);*/
+    background-color: #555;
 }
 #cons-slide4 p:first-child {
-    border: 1px solid #AB650D;
+    border: 1px solid #777;
 }
 /*** SLIDE 5 ***/
 #cons-slide5 {
-    /*background-image:url(../images/caves_karsts/MVI_3004.MOV);*/
-    background-color: #4A4300;
+    /*background-image: url(../images/conservation/**.jpg);*/
+    background-color: #222;
 }
 #cons-slide5 p:first-child {
-    border: 1px solid #8F8100;
+    border: 1px solid #777;
 }
 /*** SLIDE 6 ***/
 #cons-slide6 {
-    /*background-image:url(../images/caves_karsts/valdina_8r_web.jpg);*/
-    background-color: #27343D;
+    /*background-image: url(../images/conservation/**.jpg);*/
+    background-color: #555;
 }
 #cons-slide6 p:first-child {
-    border: 1px solid #425968;
+    border: 1px solid #777;
 }
 /*** SLIDE 7 ***/
 #cons-slide7 {
-    /*background-image:url(../images/caves_karsts/Valdina_Farms_Cave_IMG0017_web.jpg);*/
-    background-color: #613907;
+    /*background-image: url(../images/conservation/**.jpg);*/
+    background-color: #222;
 }
 #cons-slide7 p:first-child {
-    border: 1px solid #AB650D;
+    border: 1px solid #777;
 }
 /*** SLIDE 8 ***/
 #cons-slide8 {
