--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,8 +1,20 @@
 <div class="container">
 	<div class="about">
 	    <h1>What Is The Aquiferium&#63;<br/><small>The story behind the aquiferium project</small></h1>
-	    <p>Half-giant jinxes peg-leg gillywater broken glasses large black dog Great Hall. Nearly-Headless Nick now string them together, and answer me this, which creature would you be unwilling to kiss? Poltergeist sticking charm, troll umbrella stand flying cars golden locket Lily Potter. Pumpkin juice Trevor wave your wand out glass orbs, a Grim knitted hats. Stan Shunpike doe patronus, suck his soul Muggle-Born large order of drills the trace. Bred in captivity fell through the veil, quaffle blue flame ickle diddykins Aragog. Yer a wizard, Harry Doxycide the woes of Mrs. Weasley Goblet of Fire.</p>
-	    <p>Thestral dirigible plums, Viktor Krum hexed memory charm Animagus Invisibility Cloak three-headed Dog. Half-Blood Prince Invisibility Cloak cauldron cakes, hiya Harry! Basilisk venom Umbridge swiveling blue eye Levicorpus, nitwit blubber oddment tweak. Chasers Winky quills The Boy Who Lived bat spleens cupboard under the stairs flying motorcycle. Sirius Black Holyhead Harpies, you’ve got dirt on your nose. Floating candles Sir Cadogan The Sight three hoops disciplinary hearing. Grindlewald pig’s tail Sorcerer's Stone biting teacup. Side-along dragon-scale suits Filch 20 points, Mr. Potter.</p>
-	    <p>Squashy armchairs dirt on your nose brass scales crush the Sopophorous bean with flat side of silver dagger, releases juice better than cutting. Full moon Whomping Willow three turns should do it lemon drops. Locomotor trunks owl treats that will be 50 points, Mr. Potter. Witch Weekly, he will rise again and he will come for us, headmaster Erumpent horn. Fenrir Grayback horseless carriages ‘zis is a chance many would die for!</p>
+	    <p>Aquiferium began as a concept shortly after seeing a presentation by Dr. Suzanne Pierce (University of Texas at Austin) and viewing the MCSDSS application created by the Heat Seeker team for the <a href="http://www.encompassproject.org" target="_blank">Encompass Project</a>.</p>
+      <div class="embededVideo">
+        <embed-video data-ng-href="http://www.youtube.com/watch?v=SUhtSnl_ZRM" controls=1 width="100%" height="100%"><a href="http://www.youtube.com/watch?v={{ code }}">Watch</a></embed-video>
+      </div>
+      <p>The idea of developing a touch-enabled application that focuses on the Edwards Aquifer Region specifically and can be expanded for additional purposes was very exciting.  Imagine an interactive learning lab that would help people better understand the Edwards Aquifer system as a groundwater resource and promote the mission of the EAA by highlighting the work that the EAA performs or is involved with throughout the region.</p>
+      <p><h3>Imagine Aquiferium!</h3></p>
+      <p>The early concept stages of the project began to develop.</p>
+      <div class="centered">
+        <img class="imageLeft" src="../images/about/concept-01.jpg"/>
+        <img class="imageRight" src="../images/about/concept-02.jpg"/>
+      </div>
+      <p>Aquiferium is designed to engage audiences within the Edwards Aquifer region, specifically the San Antonio (or Southern) segment of the Balcones Fault Zone Edwards Aquifer.  Envisioned as a science education platform, Aquiferium is comprised of interactive and gesture-enabled applications with a focus on priority content defined by the EAA. Over time, resources from the EAA website and educational program will be incorporated, or linked, into the Aquiferium. Additional items such as Aquifer careers, Timeline, Photo and Video galleries will be created and housed on the EAA website for access through the touchscreen portal.</p>
+      <p>
+      <div class='quoted'>“I believe such an interactive module would not only immediately educate and inform people within our jurisdiction, but could potentially serve as a resource and tool for policy makers as well. The potential seems evident that such a device could be used to demonstrate complicated data (such as modeled outputs) in a manner that is easy to understand for the layperson – which could foster more meaningful discussion during the decision-making process. The Edwards Aquifer Authority looks forward to exploring the possibility of working collaboratively on such a valuable opportunity to motivate, educate, and inspire people about the vitality and fragility of our groundwater resources and the Edwards Aquifer.”</div>
+      <div class='quotedby'>Marc Friberg<br/>Executive Director Public Policy &amp; External Affairs<br/>Edwards Aquifer Authority</div>
 	</div>
 </div>
