--- a/app/styles/aquiferium-base.css
+++ b/app/styles/aquiferium-base.css
@@ -71,260 +71,294 @@
 /*****************/
 /*  CUSTOM CSS   */
 /*****************/
+
 html {
-    max-width: 100%;
-    max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 body {
-    overflow-x: hidden;
-    overflow-y: scroll;
-    min-width: 640px;
-    min-height: 100%;
-    font: 100% 'Trebuchet MS', Georgia, Helvetica, 'Times New Roman', Verdana, Arial, sans-serif; 
-    text-rendering: optimizeLegibility;
-    background-color: #000; /* #425968; #85A2B4; #E6D395; #E8F5FB; #fff;*/
-    color: #fff;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  min-width: 640px;
+  min-height: 100%;
+  margin-bottom: 10em;
+  font: 100% 'Trebuchet MS', Georgia, Helvetica, 'Times New Roman', Verdana, Arial, sans-serif; 
+  text-rendering: optimizeLegibility;
+  background-color: #000; /* #425968; #85A2B4; #E6D395; #E8F5FB; #fff;*/
+  color: #fff;
 }
 h1 {
-    font-size: 3em; /* 48 / 16 */
-    line-height: 1em; /* 48 / 48 */
-    margin-bottom: .5em; /* 24 / 48 */
+  font-size: 3em; /* 48 / 16 */
+  line-height: 1em; /* 48 / 48 */
+  margin-bottom: .5em; /* 24 / 48 */
+}
+h1 small {
+  color: #4298B5;
 }
 h2 {
-    font-size: 2.25em; /* 36 / 16 */
-    line-height: 1.333333333333333em; /* 48 / 36 */
-    margin-bottom: .6666666666666667em; /* 24 / 36 */
+  font-size: 2.25em; /* 36 / 16 */
+  line-height: 1.333333333333333em; /* 48 / 36 */
+  margin-bottom: .6666666666666667em; /* 24 / 36 */
 }
 h3 {
-    font-size: 1.5em; /* 24 / 16 */
-    line-height: 1em; /* 24 / 24 */
-    margin-bottom: 1em; /* 24 / 24 */
+  font-size: 1.5em; /* 24 / 16 */
+  line-height: 1em; /* 24 / 24 */
+  margin-bottom: 1em; /* 24 / 24 */
 }
 h4 {
-    font-size: 1.3125em; /* 21 / 16 */
-    line-height: 1.142857142857143em; /* 24 / 21 */
-    margin-bottom: 1.142857142857143em; /* 24 / 21 */
+  font-size: 1.3125em; /* 21 / 16 */
+  line-height: 1.142857142857143em; /* 24 / 21 */
+  margin-bottom: 1.142857142857143em; /* 24 / 21 */
 }
 h5 {
-    font-size: 1.125em; /* 18 / 16 */
-    line-height: 1.333333333333333em; /* 24 / 18 */
-    margin-bottom: 1.333333333333333em; /* 24 / 18 */
+  font-size: 1.125em; /* 18 / 16 */
+  line-height: 1.333333333333333em; /* 24 / 18 */
+  margin-bottom: 1.333333333333333em; /* 24 / 18 */
 }
 h6 {
-    font-size: 1em; /* 16 / 16 */
-    line-height: 1.5em; /* 24 / 16 */
-    margin-bottom: 1.5em; /* 24 / 16 */
+  font-size: 1em; /* 16 / 16 */
+  line-height: 1.5em; /* 24 / 16 */
+  margin-bottom: 1.5em; /* 24 / 16 */
 }
 p {
-    font-size: 1em; /* 16 / 16 */
-    line-height: 1.5em; /* 24 / 16 */
-    margin-bottom: 1.5em; /* 24 / 16 */
+  font-size: 1em; /* 16 / 16 */
+  line-height: 1.5em; /* 24 / 16 */
+  margin-bottom: 1.5em; /* 24 / 16 */
 }
 /* fix for angular-ui-bootstrap directives */
 .nav, .pagination, .carousel, .panel-title a { 
-    cursor: pointer; 
+  cursor: pointer; 
 }
 a:hover, a:visited, a:link, a:active
 {
-    text-decoration: none;
-    color: #999;
+  text-decoration: none;
+  color: #999;
 }
 a:hover {
-    color: #fff; 
+  color: #fff; 
 }
 .content-container {
-    padding-left: 1%;
+  padding-left: 1%;
+}
+.branding {
+  float: left;
 }
 .eaa-logo {
-    min-width: 80px;
-    max-width: 10%;
-    margin-top: 0.3em;
-    margin-left: 0.5em;
-    margin-right: 1em;
-    margin-bottom: 0.3em;
+  min-width: 80px;
+  max-width: 10%;
+  margin-top: 0.3em;
+  margin-left: 0.5em;
+  margin-right: 1em;
+  margin-bottom: 0.3em;
 }
 .no-Ibar {
-    cursor:default;
+  cursor: default;
 }
 .apptitle {
-    position: absolute;
-    top: 5%;
-    font-weight: bold;
-    font-size: 30px;
-    color: #000;    
+  position: relative;
+  top: 0.1em;
+  font-weight: bold;
+  font-size: 30px;
+  color: #000;    
 }
 .footer {
-    background-color: #111;
-    border-top: 1px solid #333;
-    font-size: 0.8em;
-    padding-top: 0.8em;
+  background-color: #111;
+  border-top: 1px solid #333;
+  font-size: 0.8em;
+  padding-top: 0.8em;
 }
 .centered {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 .custom-email {
-    color: #fff;
+  color: #fff;
 }
 .text-muted {
-    /*color: #444444;*/
+  /*color: #444444;*/
+}
+.about {
+  /*margin-bottom: 10em;*/
+}
+.embededVideo {
+  /*border: 1px solid #fff;*/
+  margin: 1em auto 1em auto;
+  width: 45em;
+  height: 30em;
+}
+.imageLeft {
+  margin: 1em;
+}
+.imageRight {
+  margin: 1em;
+}
+.quoted {
+  margin-bottom: 1em;
+  font-style: italic;
+  color: #4298B5; /*#71B2C9;*/
+}
+.quotedby {
+  float: right;
+  font-size: .8em;
+  color: #aaa;
 }
 .testing {
-    position: fixed;
-    padding: 0em 1em 0em 1em;
-    bottom: 0;
-    right: 0;
-    width: auto;
-    z-index: 5000;
-    background-color: #000;
+  position: fixed;
+  padding: 0em 1em 0em 1em;
+  bottom: 0;
+  right: 0;
+  width: auto;
+  z-index: 5000;
+  background-color: #000;
 }
 /********************
 *  PARALLAX EFFECT  *
 ********************/
 /* slides */
 .wrapper {
-    width: 100%; /*960px;*/
-    min-width: 100%;
-    height: 900px; /*200px;*/
-    margin: 0 auto;
-    position: relative;
+  width: 100%;
+  min-width: 100%;
+  height: 900px;
+  margin: 0 auto;
+  position: relative;
 }
- .slide {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;    
-    box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.3);
+.slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-attachment: inherit;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;    
+  box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.3);
 }
 .slide p:first-child {
-    position: absolute;
-    border: 1px solid #fff;
-    top: 17%; /*80px;*/
-    left: 12%; /*80px;*/
-    width: 66%;
-    padding: 0.4em 0.8em;
-    color: #fff;
-    background-color: #111;
-    box-shadow: 0 0 1em #000;
-    font-size: 0.8em;
+  position: absolute;
+  border: 1px solid #fff;
+  top: 17%;
+  left: 12%;
+  width: 66%;
+  padding: 0.4em 0.8em;
+  color: #fff;
+  background-color: #111;
+  box-shadow: 0 0 1em #000;
+  font-size: 0.8em;
 }
 .slideno {
-    position: absolute;
-    top: 5%; /*6px;*/
-    left: 4%; /*20px;*/
-    font-size: 80px;
-    font-weight: bold;
-    color: rgba(0, 0, 0, 1);
-    text-shadow:
-        -1px -1px 0 #eee,  
-        1px -1px 0 #eee,
-        -1px 1px 0 #eee,
-        1px 1px 0 #eee;
+  position: absolute;
+  top: 5%;
+  left: 4%;
+  font-size: 80px;
+  font-weight: bold;
+  color: rgba(0, 0, 0, 1);
+  text-shadow:
+    -1px -1px 0 #eee,  
+    1px -1px 0 #eee,
+    -1px 1px 0 #eee,
+    1px 1px 0 #eee;
 }
 /* buttons */
- .button-scroll {
-    display: block;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 17%; /*100px;*/
-    left: 5%; /*22px;*/
-    background-image: url(../images/arrow.png);
-    background-repeat: no-repeat;
-    z-index: 10;
+.button-scroll {
+  display: block;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 17%;
+  left: 5%;
+  background-image: url(../images/arrow.png);
+  background-repeat: no-repeat;
+  z-index: 10;
 }
 .button-scroll:hover {
-    background-image:url(../images/arrow-invert.png);
-    background-repeat:no-repeat;
-    cursor:pointer;
+  background-image:url(../images/arrow-invert.png);
+  background-repeat:no-repeat;
+  cursor:pointer;
 }
 #reverse {
-    behavior:url(-ms-transform.htc);
-    /* Firefox */
-    -moz-transform:rotate(180deg);
-    /* Safari and Chrome */
-    -webkit-transform:rotate(180deg);
-    /* Opera */
-    -o-transform:rotate(180deg);
-    /* IE9 */
-    -ms-transform:rotate(180deg);
-    /* IE6,IE7 */
-    /*filter: progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476);*/
-    /* IE8 */
-    /*-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(SizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476)"; */
+  behavior:url(-ms-transform.htc);
+  /* Firefox */
+  -moz-transform:rotate(180deg);
+  /* Safari and Chrome */
+  -webkit-transform:rotate(180deg);
+  /* Opera */
+  -o-transform:rotate(180deg);
+  /* IE9 */
+  -ms-transform:rotate(180deg);
+  /* IE6,IE7 */
+  /*filter: progid:DXImageTransform.Microsoft.Matrix(sizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476);*/
+  /* IE8 */
+  /*-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(SizingMethod='auto expand', M11=0.7071067811865476, M12=-0.7071067811865475, M21=0.7071067811865475, M22=0.7071067811865476)"; */
 }
 /*****************/
 /* MEDIA QUERIES */
 /*****************/
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-    .test-media-queries p span:after { 
-        color: #00AAFF;
-        content: 'Large Screen (min-width >= 1200px)';
-    }
-    html { font-size: 20px; }
-    body { padding-top: 2.6em; }
+  .test-media-queries p span:after { 
+      color: #00AAFF;
+      content: 'Large Screen (min-width >= 1200px)';
+  }
+  html { font-size: 20px; }
+  body { padding-top: 2.6em; }
 }
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199px) {
-    .test-media-queries p span:after { 
-        color: #00FF00;
-        content: 'Desktop Screen (min-width = 992px && max-width < 1199px)';
-    }
-    html { font-size: 18px; }
-    body { padding-top: 5.6em; }
+  .test-media-queries p span:after { 
+      color: #00FF00;
+      content: 'Desktop Screen (min-width = 992px && max-width < 1199px)';
+  }
+  html { font-size: 18px; }
+  body { padding-top: 5.6em; }
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
-    .test-media-queries p span:after { 
-        color: #FFFF00;
-        content: 'Tablet Screen (min-width = 768px && max-width < 991px)';
-    }
-    html { font-size: 16px; }
-    body { padding-top: 6.0em; }
+  .test-media-queries p span:after { 
+      color: #FFFF00;
+      content: 'Tablet Screen (min-width = 768px && max-width < 991px)';
+  }
+  html { font-size: 16px; }
+  body { padding-top: 6.0em; }
 }
 /* Extra small devices (phones, less than 768px) */
 @media (min-width: 311px) and (max-width: 767px) {
-    .test-media-queries p span:after {         
-        color: #FFAA00;
-        content: 'Small Screen (min-width = 311px && max-width < 767px)';
-    }
-    html { font-size: 14px; }
-    body { padding-top: 3.5em; }
-    .apptitle {
-        font-size: 24px;
-        top: 20%;
-    }
+  .test-media-queries p span:after {         
+      color: #FFAA00;
+      content: 'Small Screen (min-width = 311px && max-width < 767px)';
+  }
+  html { font-size: 14px; }
+  body { padding-top: 3.5em; }
+  .apptitle {
+      font-size: 24px;
+      top: 20%;
+  }
 }
 /* Dealing with Bootstrap on tiny screens */
 @media (min-width: 210px) and (max-width: 310px) {
-    .test-media-queries p span:after {         
-        color: #FF5500;
-        content: 'Tiny Screen (min-width = 210px && max-width = 310px)';
-    }
-    html { font-size: 12px; }
-    body { padding-top: 6.5em; }
-    .apptitle {
-        font-size: 18px;
-        top: 12%;
-    }
+  .test-media-queries p span:after {         
+      color: #FF5500;
+      content: 'Tiny Screen (min-width = 210px && max-width = 310px)';
+  }
+  html { font-size: 12px; }
+  body { padding-top: 6.5em; }
+  .apptitle {
+      font-size: 18px;
+      top: 12%;
+  }
 }
 /* Dealing with Bootstrap on micro screens */
 @media (min-width: 80px) and (max-width: 209px) {
-    .test-media-queries p span:after {         
-        color: #FF0000;
-        content: 'Micro Screen (max-width <= 209px)';
-    }
-    html { font-size: 10px; }
-    body { padding-top: 9.5em; }
-    .apptitle {
-        font-size: 16px;
-        top: 4%;
-    }
+  .test-media-queries p span:after {         
+      color: #FF0000;
+      content: 'Micro Screen (max-width <= 209px)';
+  }
+  html { font-size: 10px; }
+  body { padding-top: 9.5em; }
+  .apptitle {
+      font-size: 16px;
+      top: 4%;
+  }
 }
+/* END CSS */
