--- a/app/styles/springs.css
+++ b/app/styles/springs.css
@@ -3,15 +3,15 @@
 *******************************/
 /*** SLIDE 0 ***/
 #springs-slide0 {
-    /*background-image: url(../images/caves_karsts/DSC_0318_web.jpg);*/
-    background-color: #555;
+    background-image: url(../images/springs/com-springs2_web.jpg);
+    /*background-color: #555;*/
 }
 #springs-slide0 p:first-child {
-    border: 1px solid #777;
+    border: 1px solid #71B2C9;
 }
 /*** SLIDE 1 ***/
 #springs-slide1 {
-    /*background-image:url(../images/caves_karsts/Seco chnl3 7-25-07.MPG);*/
+    /*background-image: url(../images/springs/**);*/
     background-color: #222;
 }
 #springs-slide1 p:first-child {
@@ -19,7 +19,7 @@
 }
 /*** SLIDE 2 ***/
 #springs-slide2 {
-    /*background-image:url(../images/caves_karsts/For-Doty1_940x714_web.jpg);*/
+    /*background-image: url(../images/springs/**);*/
     background-color: #555;
 }
 #springs-slide2 p:first-child {
@@ -27,15 +27,15 @@
 }
 /*** SLIDE 3 ***/
 #springs-slide3 {
-    /*background-image:url(../images/caves_karsts/MVI_3085.MOV);*/
-    background-color: #222;
+    background-image:url(../images/springs/aerial_view.jpg);
+    /*background-color: #222;*/
 }
 #springs-slide3 p:first-child {
-    border: 1px solid #777;
+    border: 1px solid #AADD6D;
 }
 /*** SLIDE 4 ***/
 #springs-slide4 {
-    /*background-image:url(../images/caves_karsts/edwards-limestone_web.jpg);*/
+    /*background-image: url(../images/springs/**);*/
     background-color: #555;
 }
 #springs-slide4 p:first-child {
@@ -43,15 +43,15 @@
 }
 /*** SLIDE 5 ***/
 #springs-slide5 {
-    /*background-image:url(../images/caves_karsts/MVI_3004.MOV);*/
-    background-color: #222;
+    background-image: url(../images/springs/EAAaquarena20120702_8316_web.jpg);
+    /*background-color: #222;*/
 }
 #springs-slide5 p:first-child {
-    border: 1px solid #777;
+    border: 1px solid #71B2C9;
 }
 /*** SLIDE 6 ***/
 #springs-slide6 {
-    /*background-image:url(../images/caves_karsts/valdina_8r_web.jpg);*/
+    /*background-image: url(../images/springs/**);*/
     background-color: #555;
 }
 #springs-slide6 p:first-child {
@@ -59,13 +59,29 @@
 }
 /*** SLIDE 7 ***/
 #springs-slide7 {
-    /*background-image:url(../images/caves_karsts/Valdina_Farms_Cave_IMG0017_web.jpg);*/
+    background-image: url(../images/springs/EAArice20120503_3620_web.jpg);
     background-color: #222;
 }
 #springs-slide7 p:first-child {
-    border: 1px solid #777;
+    border: 1px solid #AADD6D;
 }
 /*** SLIDE 8 ***/
 #springs-slide8 {
+    background-image: url(../images/springs/EAAOriparianrandy20120801_0404_web.jpg);
+    background-color: #222;
+}
+#springs-slide8 p:first-child {
+    border: 1px solid #AADD6D;
+}
+/*** SLIDE 9 ***/
+#springs-slide9 {
+    /*background-image: url(../images/springs/**);*/
+    background-color: #222;
+}
+#springs-slide9 p:first-child {
+    border: 1px solid #777;
+}
+/*** SLIDE 10 ***/
+#springs-slide10 {
     background-color: #000;
 }
