--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -15,7 +15,7 @@
     <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <div class="centered">
-        <d3-geojson class="d3map"></d3-geojson> <!-- data-geo="dataSource01" -->
+        <!-- <d3-geojson class="d3map"></d3-geojson> --> <!-- data-geo="dataSource01" -->
       </div>
     </div>      
 	</div>
@@ -76,7 +76,7 @@
 
 	<!-- Slide 8 -->
 	<div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
-		<span class="slideno">Slide 8</span>                  
+		<span class="slideno">End</span>                  
 	    <div class="wrapper">
 		</div> 
 	</div>
