--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -2,7 +2,7 @@
 	<div class="explore">
 	    <h1>Explore Aquifers<br/><small>Select a location to begin exploring the aquifers</small></h1>
 	    <div class="centered">
-	        <d3-geojson class="d3map"></d3-geojson>
+	        <!-- <d3-geojson class="d3map"></d3-geojson> -->
 	    </div>
 	</div>
 </div>
