--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -1,81 +1,100 @@
 <div class="springs">
   <!-- Slide 0 -->
   <div data-parallax-background class="slide" id="springs-slide0" data-slide="0" data-parallax-ratio="0.5">
-    <span class="slideno">How Do Aquifers Recharge&#63;</span>
+    <span class="slideno">Comal Springs</span>
     <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">The replenishing of aquifers</p>
+      <p alt="">Cool, clear Edwards Aquifer water emerges at Comal Springs, as natural artesian pressure forces the water up the faults and fractures in the overlying rocks.</p>
     </div>     
   </div>
 
   <!-- Slide 1 -->
   <div data-parallax-background class="slide" id="springs-slide1" data-slide="1" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 1</span>
+    <span class="slideno">Video 1</span>
     <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <div class="centered">
-        <d3-geojson class="d3map"></d3-geojson> <!-- data-geo="dataSource01" -->
-      </div>
+      <p alt="">Spring flow is dependant upon recharge and conservation.  Declining aquifer leves can result in reduced flow, or no flow if water levels drop below the elevation of the spring openings.</p>
+      <!-- <div class="centered"> -->
+        <!-- <d3-geojson class="d3map"></d3-geojson> data-geo="dataSource01" -->
+      <!-- </div> -->
     </div>     
   </div>
 
   <!-- Slide 2 -->
   <div data-parallax-background class="slide" id="springs-slide2" data-slide="2" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 2</span>
+    <span class="slideno">Video 2</span>
     <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+      <p alt="">Spring water provides habitat for aquifer species, water for downstream users, and fresh inflows for the bays and estuaries along the Texas Gulf Coast.</p>
     </div>    
   </div>
 
   <!-- Slide 3 -->
   <div data-parallax-background class="slide" id="springs-slide3" data-slide="3" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 3</span> 
+    <span class="slideno">San Marcos Springs</span> 
     <a class="button-scroll" data-slide="4" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+      <p alt="">Heading north and east about 20 miles from Comal Springs, you’ll reach San Marcos Springs, the second largest spring system and Texas.</p>
     </div>
   </div>
 
   <!-- Slide 4 -->
   <div data-parallax-background class="slide" id="springs-slide4" data-slide="4" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 4</span>                 
+    <span class="slideno">Video 3</span>                 
     <a class="button-scroll" data-slide="5" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+      <p alt="">Beneath the lake, numerous springs emerge along a common fault line propelling millions of gallons of water to the surface daily.</p>
     </div>   
   </div>
 
   <!-- Slide 5 -->
   <div data-parallax-background class="slide" id="springs-slide5" data-slide="5" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 5</span>
+    <span class="slideno">Deep Springs</span>
     <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+      <p alt="">EAA technicians and divers from Texas State University work together to take water quality samples from Deep Spring, nearly 30 feet below the surface.</p>
     </div>  
   </div>
 
   <!-- Slide 6 -->
   <div data-parallax-background class="slide" id="springs-slide6" data-slide="6" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 6</span>         
+    <span class="slideno">Video 4</span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
-    </div> 
+      <p alt="">Divers insert the pump directly into the spring opening to take the most accurate water quality readings.</p>
+    </div>
   </div>
 
   <!-- Slide 7 -->
   <div data-parallax-background class="slide" id="springs-slide7" data-slide="7" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 7</span>              
-    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+    <span class="slideno">Endangered Species</span>              
+    <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Boggarts lavender robes, Hermione Granger Fantastic Beasts and Where to Find Them. Bee in your bonnet Hand of Glory elder wand, spectacles House Cup Bertie Bott’s Every Flavor Beans Impedimenta. Stunning spells tap-dancing spider Slytherin’s Heir mewing kittens Remus Lupin. Palominos scarlet train black robes, Metamorphimagus Niffler dead easy second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue turban remember my last.</p>
+      <p alt="">All the Edwards Aquifer Endangered and Threatened species – including Texas Wild Rice seen here – depend on clean fresh water from the aquifer.</p>
     </div>
   </div>
 
   <!-- Slide 8 -->
-  <div class="slide" id="springs-slide8" data-slide="8" data-parallax-ratio="0.5">
-    <span class="slideno">Slide 8</span>                  
+  <div data-parallax-background class="slide" id="springs-slide8" data-slide="8" data-parallax-ratio="0.5">
+    <span class="slideno">Invasive Species</span>              
+    <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">In addition to water quality concerns, exotic invasive species like these elephant ear plants also threaten the habitat of the native species, by competing for food and altering the original riparian areas.</p>
+    </div>
+  </div>
+
+  <!-- Slide 9 -->
+  <div data-parallax-background class="slide" id="springs-slide9" data-slide="9" data-parallax-ratio="0.5">
+    <span class="slideno">Habitat Conservation</span>              
+    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">To protect the endangered species long term the EAA, its regional partners, and stakeholders have implemented a comprehensive <a href="http://eahcp.org/index.php/about_eahcp/covered_species" title="Habitat Conservation Plan" target="_blank">Habitat Conservation Plan</a> to protect spring flow, water quality, and riparian habitat.</p>
+    </div>
+  </div>
+
+  <!-- Slide 10 -->
+  <div class="slide" id="springs-slide10" data-slide="10" data-parallax-ratio="0.5">
+    <span class="slideno">End</span>                  
     <div class="wrapper">
     </div> 
   </div>
