--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -1,7 +1,7 @@
 <div class="conservation">
 	<!-- Slide 0 -->
 	<div data-parallax-background class="slide" id="cons-slide0" data-slide="0" data-parallax-ratio="0.5">
-		<span class="slideno">Aquifer Conservation</span>
+		<span class="slideno">Conservation</span>
     <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <!-- <p data-stellar-ratio="1.5" alt=""></p> -->
