--- a/app/styles/transitions-angular.css
+++ b/app/styles/transitions-angular.css
@@ -7,10 +7,51 @@
 .view-animate {
 }
 .view-animate.ng-enter, .view-animate.ng-leave {
-    -webkit-transition:all cubic-bezier(0.250, 0.450, 0.450, 0.950) 0.80s;
-    -moz-transition:all cubic-bezier(0.250, 0.450, 0.450, 0.950) 0.80s;
-    -o-transition:all cubic-bezier(0.250, 0.450, 0.450, 0.950) 0.80s;
-    transition:all cubic-bezier(0.250, 0.450, 0.450, 0.950) 0.80s;
+
+    /* FADE EFFECT */
+
+     -webkit-transition: opacity 500ms cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+    -moz-transition: opacity 500ms cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+    -o-transition: opacity 500ms cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+    transition: opacity 500ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+
+    /* SLIDE IN EFFECT */
+
+    /*
+    -webkit-transition: left 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000) 500ms; 
+    -moz-transition: left 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000) 500ms; 
+    -o-transition: left 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000) 500ms; 
+    transition: left 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000) 500ms;
+    */
+
+    /* SLIDE IN + FADE EFFECT */
+    /* NOTE: Issue with Parallax Views updating before transition. */
+
+    /*    
+    -webkit-transition-property: opacity, left; 
+    -moz-transition-property: opacity, left; 
+    -o-transition-property: opacity, left; 
+    transition-property: opacity, left; 
+
+    -webkit-transition-duration: 500ms, 750ms;
+    -moz-transition-duration: 500ms, 750ms;
+    -o-transition-duration: 500ms, 750ms;
+    transition-duration: 500ms, 750ms;
+
+    -webkit-transition-delay: 0, 500ms;
+    -moz-transition-delay: 0, 500ms;
+    -o-transition-delay: 0, 500ms; 
+    transition-delay: 0, 500ms;
+    */
+
+    /* SHORTHAND SLIDE IN + FADE EFFECT */
+    /*
+    -webkit-transition: all 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+    -moz-transition: all 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+    -o-transition: all 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000); 
+    transition: all 750ms cubic-bezier(0.645, 0.045, 0.355, 1.000);
+    */
+
     display:inline-block;
     width:100%;
     position:absolute; /*absolute, relative*/
