--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -88,7 +88,7 @@
     <span class="slideno">Habitat Conservation</span>              
     <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">To protect the endangered species long term the EAA, its regional partners, and stakeholders have implemented a comprehensive <a href="http://eahcp.org/index.php/about_eahcp/covered_species" title="Habitat Conservation Plan" target="_blank">Habitat Conservation Plan</a> to protect spring flow, water quality, and riparian habitat.</p>
+      <p alt="">To protect the endangered species long term the EAA, its regional partners, and stakeholders have implemented a comprehensive <a class="navLinkHcp" href="{{hcpurl}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(hcpurl)">Habitat Conservation Plan</a> to protect spring flow, water quality, and riparian habitat.</p>
     </div>
   </div>
 
