--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -15,7 +15,7 @@
     <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <div class="centered">
-        <!-- <d3-geojson class="d3map"></d3-geojson> --> <!-- data-geo="dataSource01" -->
+        <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map>
       </div>
     </div>      
 	</div>
