--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,8 +1,9 @@
 <div class="container">
 	<div class="explore">
-	    <h1>Explore Aquifers<br/><small>Select a location to begin exploring the aquifers</small></h1>
-	    <div class="centered">
-	        <!-- <d3-geojson class="d3map"></d3-geojson> -->
-	    </div>
+    <h1>Explore Aquifers<br/><small>Select a location to begin exploring the aquifers</small></h1>
+    <div class="centered">
+      <eaa-aquifers-map></eaa-aquifers-map>
+    </div>
 	</div>
 </div>
+<!-- <texas-eaa-aquifers data="shared.data" on-click="chartClicked()"></texas-eaa-aquifers> -->
